# EliteSpeedrunTool

./: README.md
DiscordGameSDK/: CMakeLists.txt  types.h
EliteSpeedrunTool/: AcknowledgementDialog.cpp  AcknowledgementDialog.h  AcknowledgementDialog.ui  App.rc  AutoCapture.cpp  AutoCapture.h  AutoTimerUtil.cpp  AutoTimerUtil.h  CMakeLists.txt  CursorSelectorButton.cpp  CursorSelectorButton.h  DescriptionDialog.cpp  DescriptionDialog.h  DescriptionDialog.ui  DiscordUtil.cpp  DiscordUtil.h  DisplayInfoDialog.cpp  DisplayInfoDialog.h  DisplayInfoDialog.ui  DisplayInfoSubFunction.cpp  DisplayInfoSubFunction.h  FirewallUtil.cpp  FirewallUtil.h  GlobalData.cpp  GlobalData.h  HotkeyUtil.cpp  HotkeyUtil.h  HttpServerUtil.cpp  HttpServerUtil.h  ImageUtil.cpp  ImageUtil.h  LanguageUtil.cpp  LanguageUtil.h  LogUtil.cpp  LogUtil.h  LottieUtil.cpp  LottieUtil.h  MainFeatures.cpp  MainFeatures.h  MainWindow.cpp  (+34 more)
EliteSpeedrunTool/act3headshot/: RegionSelectorDialog.cpp  RegionSelectorDialog.h  RegionSelectorDialog.ui  RegionSelectorGraphicsView.h  RegionSelectorRect.cpp  RegionSelectorRect.h  RpRecognizeUtil.cpp  RpRecognizeUtil.h
EliteSpeedrunTool/dataobserver/: AutoTimerUtil.cpp  AutoTimerUtil.h  DataObserver.cpp  DataObserver.h
EliteSpeedrunTool/dataobserver/datafetcher/: BaseDataFetcher.h  DataFetcherUtil.cpp  DataFetcherUtil.h  HeadshotFetcher.cpp  HeadshotFetcher.h  Kill1Fetcher.cpp  Kill1Fetcher.h  Kill2Fetcher.cpp  Kill2Fetcher.h  Kill3Fetcher.cpp  Kill3Fetcher.h  Kill4Fetcher.cpp  Kill4Fetcher.h  Kill4PFetcher.cpp  Kill4PFetcher.h  KillFetcher.cpp  KillFetcher.h  KillHostClient1Fetcher.cpp  KillHostClient1Fetcher.h  KillHostFetcher.cpp  KillHostFetcher.h  MissionHashFetcher.cpp  MissionHashFetcher.h  RashkovskyDamageFetcher.cpp  RashkovskyDamageFetcher.h  RashkovskyHurtFetcher.cpp  RashkovskyHurtFetcher.h  VehicleDamageFetcher.cpp  VehicleDamageFetcher.h
EliteSpeedrunTool/dataobserver/missionstrategy/: BakerBadBeatStrategy.cpp  BakerBadBeatStrategy.h  BaseMissionStrategy.cpp  BaseMissionStrategy.h  CasinoHeistAggressiveStrategy.cpp  CasinoHeistAggressiveStrategy.h  CasinoHeistEndStageStrategy.cpp  CasinoHeistEndStageStrategy.h  CasinoHeistSilentSneakyStrategy.cpp  CasinoHeistSilentSneakyStrategy.h  CasinoHeistTheBigConStrategy.cpp  CasinoHeistTheBigConStrategy.h  DoomsdayAct1Strategy.cpp  DoomsdayAct1Strategy.h  DoomsdayAct2Strategy.cpp  DoomsdayAct2Strategy.h  DoomsdayAct3Strategy.cpp  DoomsdayAct3Strategy.h  EmptyStrategy.cpp  EmptyStrategy.h  FleecaJobStrategy.cpp  FleecaJobStrategy.h  HumaneLabsRaidStrategy.cpp  HumaneLabsRaidStrategy.h  LostMcRipStrategy.cpp  LostMcRipStrategy.h  MissionStrategyUtil.cpp  MissionStrategyUtil.h  PacificStandardStrategy.cpp  PacificStandardStrategy.h  PrisonBreakStationStrategy.cpp  PrisonBreakStationStrategy.h  PrisonBreakStrategy.cpp  PrisonBreakStrategy.h  PrisonBreakWetWorkStrategy.cpp  PrisonBreakWetWorkStrategy.h  SeriesAFundingStrategy.cpp  SeriesAFundingStrategy.h
EliteSpeedrunTool/dataobserver/missionstrategy/act1/: Act1DeadCourierStrategy.cpp  Act1DeadCourierStrategy.h  Act1ServerFarmStrategy.cpp  Act1ServerFarmStrategy.h  Act1SignalInterceptsStrategy.cpp  Act1SignalInterceptsStrategy.h  TheDataBreachesStrategy.cpp  TheDataBreachesStrategy.h
EliteSpeedrunTool/dataobserver/missionstrategy/act2/: Act2AvengerStrategy.cpp  Act2AvengerStrategy.h  Act2RescueUlpStrategy.cpp  Act2RescueUlpStrategy.h  Act2SalvageHardDrivesStrategy.cpp  Act2SalvageHardDrivesStrategy.h  Act2SubmarineReconStrategy.cpp  Act2SubmarineReconStrategy.h  TheBogdanProblemStrategy.cpp  TheBogdanProblemStrategy.h
EliteSpeedrunTool/dataobserver/missionstrategy/act3/: Act3AirDefensesStrategy.cpp  Act3AirDefensesStrategy.h  Act3BarrageStrategy.cpp  Act3BarrageStrategy.h  Act3EscortUlpStrategy.cpp  Act3EscortUlpStrategy.h  Act3KhanjaliStrategy.cpp  Act3KhanjaliStrategy.h  Act3RescueAgent14Strategy.cpp  Act3RescueAgent14Strategy.h  TheDoomsdayScenarioStrategy.cpp  TheDoomsdayScenarioStrategy.h
EliteSpeedrunTool/dataobserver/missionstrategy/casino/: CasinoBadBeatStrategy.cpp  CasinoBadBeatStrategy.h
EliteSpeedrunTool/dataobserver/missionstrategy/casinoheist/: CasinoHeistAggressiveStrategy.cpp  CasinoHeistAggressiveStrategy.h  CasinoHeistEndStageStrategy.cpp  CasinoHeistEndStageStrategy.h  CasinoHeistSilentSneakyStrategy.cpp  CasinoHeistSilentSneakyStrategy.h  CasinoHeistTheBigConStrategy.cpp  CasinoHeistTheBigConStrategy.h
EliteSpeedrunTool/dataobserver/missionstrategy/fleecajob/: FleecaJobKurumaStrategy.cpp  (+5 more)
EliteSpeedrunTool/displayinfo/: CrosshairDialog.cpp  CrosshairDialog.h  CrosshairDialog.ui  CrosshairGraphicsView.cpp  CrosshairGraphicsView.h  DisplayInfoDialog.cpp  DisplayInfoDialog.h  DisplayInfoDialog.ui  DisplayInfoSubFunction.cpp  DisplayInfoSubFunction.h  RtssUtil.cpp  RtssUtil.h
EliteSpeedrunTool/event/: CmdEventHelper.cpp  CmdEventHelper.h  Event.h  EventBus.cpp  EventBus.h
EliteSpeedrunTool/event/cmd/: CmdSequenceWizard.cpp  CmdSequenceWizard.h  DelayCmdWizard.cpp  DelayCmdWizard.h  RunExeCmdWizard.cpp  RunExeCmdWizard.h  ShutdownCmdWizard.cpp  ShutdownCmdWizard.h
EliteSpeedrunTool/event/observer/: CmdObserver.cpp  CmdObserver.h
EliteSpeedrunTool/hotkey/: HotkeyRedirector.cpp  HotkeyRedirector.h  HotkeyRedirector.ui  HotkeyUtil.cpp  HotkeyUtil.h  KeySequenceTableWidget.cpp  KeySequenceTableWidget.h
EliteSpeedrunTool/html/: DisplayInfo.css  DisplayInfo.html  DisplayInfo.js
EliteSpeedrunTool/lib/: WinMM.Lib
EliteSpeedrunTool/lottie/: lo_love_lab_1.json  lo_rikka_1.json  lo_satanichia_1.json
EliteSpeedrunTool/memoryutil/: FakeMemoryUtil.cpp  FakeMemoryUtil.h  MemoryUtil.cpp  MemoryUtil.h
EliteSpeedrunTool/net/: FirewallPathTableWidget.cpp  FirewallPathTableWidget.h  FirewallRule.h  FirewallUtil.cpp  FirewallUtil.h  HttpServerUtil.cpp  HttpServerUtil.h  NetworkAdapterUtil.cpp  NetworkAdapterUtil.h
EliteSpeedrunTool/net/wfp/: WfpController.cpp  WfpController.h
EliteSpeedrunTool/pcsettings/: AutoTimer.cpp  AutoTimer.h  PcSettingsUtil.cpp  PcSettingsUtil.h
QHotkey/: CMakeLists.txt  qhotkey_mac.cpp  qhotkey_win.cpp  qhotkey_x11.cpp
(+64 files in other folders)
